[gd_scene load_steps=4 format=3 uid="uid://scxh5u5yqetr"]

[ext_resource type="Script" path="res://game/game.gd" id="1_d4k84"]
[ext_resource type="PackedScene" uid="uid://csae2sycqvgmn" path="res://gui/pause_menu.tscn" id="2_s1akv"]
[ext_resource type="PackedScene" uid="uid://b8sqjfmxa2gbh" path="res://gui/game_hud.tscn" id="3_jsns8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_d4k84")

[node name="PauseMenu" parent="." instance=ExtResource("2_s1akv")]
visible = false

[node name="GameHud" parent="." instance=ExtResource("3_jsns8")]

[connection signal="quit" from="PauseMenu" to="." method="_on_pause_menu_quit"]
[connection signal="restart" from="PauseMenu" to="." method="_on_pause_menu_restart"]
[connection signal="resume" from="PauseMenu" to="." method="_on_pause_menu_resume"]
